defined the structure for the first ecommerce section

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -15,12 +15,12 @@
             <div class="col-md-5">
                 <div class="product-info">
                     <div class="category">sale</div>
-                    <div class="product-name">Cool Watch</div>
+                    <div class="product-name">New Beats Headphones</div>
                     <div class="product-description">Data Centers have gained with capacity <br> and always across connectivity and
                         <br> capacity across the organization</div>
                     <ul class="features-list">
-                        <li class="feature">38 mm case</li>
-                        <li class="feature">fits 130-200mm wrists</li>
+                        <li class="feature"><div class="line"></div>38 mm case</li>
+                        <li class="feature"><div class="line"></div> fits 130-200mm wrists</li>
                     </ul>
                     <div class="button-group">
                         <div class="purchase-btn">purchase</div>
@@ -33,6 +33,7 @@
             </div>
             <div class="col-md-7">
                 <div class="product-image">
+                    <div class="new-badge"><div class="text">new</div></div>
                     <img src="img/beat-headphones-one.png" alt="product-headphones">
                 </div>
             </div>
