added the ecommerce two section

--- a/ecommerce.html
+++ b/ecommerce.html
@@ -39,6 +39,9 @@
             </div>
         </div>
     </div>
-</section>
+</section> <!-- ecommerce-one --->
+<section class="ecommerce-two">
+    
+</section> <!-- ecommerce-two --->
 </body>
 </html>
